# coderd/apidoc/swagger.json
@@ -5054,7 +5054,7 @@
           "$ref": "#/definitions/codersdk.DERP"
         },
         "experimental": {
-          "$ref": "#/definitions/codersdk.DeploymentConfigField-bool"
+          "$ref": "#/definitions/codersdk.DeploymentConfigField-codersdk_ExperimentalConfig"
         },
         "gitauth": {
           "$ref": "#/definitions/codersdk.DeploymentConfigField-array_codersdk_GitAuthConfig"
@@ -5238,6 +5238,44 @@
         }
       }
     },
+    "codersdk.DeploymentConfigField-codersdk_ExperimentalConfig": {
+      "type": "object",
+      "properties": {
+        "default": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "enterprise": {
+          "type": "boolean"
+        },
+        "flag": {
+          "type": "string"
+        },
+        "hidden": {
+          "type": "boolean"
+        },
+        "name": {
+          "type": "string"
+        },
+        "secret": {
+          "type": "boolean"
+        },
+        "shorthand": {
+          "type": "string"
+        },
+        "usage": {
+          "type": "string"
+        },
+        "value": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
     "codersdk.DeploymentConfigField-int": {
       "type": "object",
       "properties": {
@@ -5354,6 +5392,12 @@
         },
         "experimental": {
           "type": "boolean"
+        },
+        "experimental_features": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         },
         "features": {
           "type": "object",
