# site/src/api/typesGenerated.ts
@@ -310,7 +310,7 @@ export interface DeploymentConfig {
   readonly scim_api_key: DeploymentConfigField<string>
   readonly provisioner: ProvisionerConfig
   readonly rate_limit: RateLimitConfig
-  readonly experimental: DeploymentConfigField<boolean>
+  readonly experimental: DeploymentConfigField<ExperimentalConfig>
   readonly update_check: DeploymentConfigField<boolean>
   readonly max_token_lifetime: DeploymentConfigField<number>
   readonly swagger: SwaggerConfig
@@ -337,6 +337,7 @@ export interface Entitlements {
   readonly errors: string[]
   readonly has_license: boolean
   readonly experimental: boolean
+  readonly experimental_features: string[]
   readonly trial: boolean
 }
 
@@ -1157,4 +1158,10 @@ export type WorkspaceStatus =
 export type WorkspaceTransition = "delete" | "start" | "stop"
 
 // From codersdk/deploymentconfig.go
-export type Flaggable = string | number | boolean | string[] | GitAuthConfig[]
+export type Flaggable =
+  | string
+  | number
+  | boolean
+  | string[]
+  | GitAuthConfig[]
+  | ExperimentalConfig
